# dupchess

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  dupchess.cpp  global.h
enc_temp_folder/c33741209de7e24f8bf79e80d9e4eeec/: dupchess.cpp
include/: CMakeLists.txt  adder.cpp  board.cpp  board.h  global.h
main/: CMakeLists.txt  dupchess.cpp  son_of_dupchess.wgt  velma_v1.wgt  velma_v2.wgt
res/: CMakeLists.txt
res/weights/: CMakeLists.txt
src/: CMakeLists.txt  board.cpp  board.h  dupEngine.cpp  dupEngine.h  dupchess.cpp  global.cpp  global.h  io_handler.cpp  io_handler.h  move.cpp  move.h  utils.cpp  utils.h
src/chess/: CMakeLists.txt  dupEngine.cpp  dupEngine.h  io_handler.cpp  io_handler.h  move.cpp  move.h  utils.cpp  utils.h
src/nnue/: CMakeLists.txt  layer.cpp  layer.h  nnue.cpp  nnue.h  train_nnue.py
src/training/: CMakeLists.txt  convert_to_wdl.py  dupchess_nnue.py  hyperparameters.json  load_batch_funcs.cpp  load_batch_funcs.h  prep_batch.pyx  prepare_batch.cpp  prepare_batch.h  prepare_batch.pyx  prepare_batch_funcs.cpp  prepare_batch_funcs.h  requirements.txt  setup.py  speedloader.cpp  speedloader.pyx  streamloader.py  test.pyx  train_nnue.py  write_weights.py
tests/: CMakeLists.txt  move_gen_tests.cpp  nnue_tests.cpp  tests.cpp
tools/: CMakeLists.txt  bin_proc.cpp  bin_proc.py  parse_lichess.py  requirements.txt  shuffler.py
